--- a/2020_Dec_TUKS/index.Rmd
+++ b/2020_Dec_TUKS/index.Rmd
@@ -123,13 +123,15 @@ But in order for this to happen your data needs to be **usable**
 
 # So What?
 
-1. Open Science will be the 'new normal' and is becoming an expectation for publication and funding
++ Open Science will be the 'new normal' and is becoming an expectation for publication and funding
 
-2. Open data leads to increased citations
++ Open data leads to increased citations
 
-3. It fosters collaboration and opens doors for what we can achieve with our research
+--
 
-4. It makes your (personal) workflow easier (especially for future you) **and** makes for easier collaborative work/writing
++ It fosters collaboration and opens doors for what we can achieve with our research
+
++ It makes your (personal) workflow easier (especially for future you) **and** makes for easier collaborative work/writing
   + The little bit of extra time is worth it - trust me
 
 ---
@@ -155,16 +157,17 @@ But in order for this to happen your data needs to be **usable**
 
 # Where to Start Though?
 
-.footnote[[*] Respecting data sharing restrictions and embargoes]
 
 .left-column[data lifecycle.png]
 
 --
 
+.footnote[[*] Respecting data sharing restrictions and embargoes]
+
 .right-column[
 - Think about how you enter your data
   * Follow data and metadata standards (e.g. [DarwinCore](https://www.tdwg.org/))
-  * Document it (e.g. README file) think of this as an extensive methods section
+  * Document **everything** 
 
 
 - Document data processing and analysis
@@ -174,11 +177,10 @@ But in order for this to happen your data needs to be **usable**
   
 - Archive data in an accessible way
   * Make as open and findable as possible<sup>*</sup>
-  * Include **all** documentation
   * See [here](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1005097) for some more tips
   
   
-- Do some of your [own research](https://www.fosteropenscience.eu/courses)
+- Do some [futher reading](https://www.fosteropenscience.eu/courses)
 ]
 
 ---
@@ -198,15 +200,16 @@ background-size: 20%
 # If it isn't Documented it Doesn't Exist
 
 **Document all changes to raw data**
-+ Ideally after inputting your data into a file<sup>*</sup> it should remain untouched and unchanged. 
-+ Using a script based workflow means you keep track of what and how things changed (*sensu lato* a lab book)
++ Ideally after inputting your data into a file<sup>*</sup> that file should remain unchanged. 
+  + Data cleaning should be scripted
++ Using a script based workflow means you keep track of what and how things changed
 
 .footnote[[*] Ideally using a non propriety format such as .csv or .txt]
 
 --
 
 **Document the *entire* workflow**
-+ Having metadata for variables is good
++ Having metadata for variables - that's good
   + Mandatory I'd argue
 + Documenting how scripts 'work' - even better
   + What happens in each script
@@ -230,18 +233,21 @@ background-size: 20%
 
 # Annotations save lives <sub style="font-size: medium;">(and time)</sub>
 
+.center[
 Annotating your code by adding comments makes it easier for you (and others) to understand what or why you decided to do what you did
+]
 
 --
 
 .pull-left[
-- Pseudocode can double up as annotations
-  * Pseudocoding is a way of writing out your code in 'plain language' before you start coding it up
+- Annotations double up as pseudocode
   
   
 - Detail specific changes or reasoning
   * Especially when cleaning or transforming data
   ]
+
+--
 
 .pull-right[
 <img src="img/annotations.png" width="100%" />]
@@ -259,23 +265,25 @@ background-size: 35%
 
 # Get with GitHub
 
-.footnote[[*] I find this also 'forces' me to make sure my code is readable/shareable]
-
+.center[
 Think of GitHub as a google drive of sorts that you would keep your projects in - the only difference is that it has some bonus features.
+]
 
-* **It's Open Access:** Like a social media profile that people can click on and explore it *i.e.* you can share and showcase your work/packages/projects<sup>*</sup>.
-  + This is where your data/analyses can 'live' until needed.
-
---
-
-* **It has Version Control:** This means that every time you re-upload a file the older versions are saved (and can be recouped if needed).
+* It has **Version Control:** This means that every time you re-upload a file the older versions are saved (and can be recouped if needed).
   + You can do this [straight from RStudio](https://happygitwithr.com/rstudio-git-github.html)
-  + This also facilitates collaboration in a big way (no more email chain!)
-      + Everyone has the most up to date version on their device
+  + Everyone has the most up to date version on their device - *no more email chain!*
+  
 
 --
 
-* **It's Designed for Programming:** Aside form simple storage of files you can design [workflows](https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions) that run jobs depending on what happens in the repository.
+* It makes for easy **archiving** and **sharing**. Projects are hosted in repositories in the public domain.
+  + Drop the link and everyone has read access
+  + It's designed with documentation and hosting in mind
+  
+  
+--
+
+* It's **designed for programming:** Aside form simple storage of files you can design [workflows](https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions) that run jobs depending on what happens in the repository.
 
 ---
 
@@ -284,7 +292,7 @@ background-size: 100%
 
 ---
 
-# A GitHub 'Primer'
+# GitHub: Fast facts
 
 1. GitHub is the 'norm' in the world of Open Source  - so if you want to go open go with GitHub
 
@@ -308,21 +316,14 @@ background-size: 100%
 
 + Social media
 
++ ORCiD
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="sketch.js"></script>
     <script src="dazzleSketch.js"></script>
 ---
 
 Thank You
-<html lang="en">
-<body>
-    <h1>This is a Header</h1>
-    <p>This is a paragraph that we will scribble on. wljefhbrjhsfg cwlkehflkshflkjsghef,shfeksb lkefhbsv;kfhns;khf liuwhfvbksehbhfkjsbfcjsbdflhbcskfhbseklhfbvksjb fcjksbdf kjsehrksbhcfkasbkvsdnfbkvsdhfbk.snfbv,msdnfvks.dhfksbf,nmsndfksvdhbfkjsbhc,sdnfbdjkshfl`sbfc.,dnv .k`fhbhf;oi`ajnefi`jnevo;irewbhvrjqn;lcjas;hbw;oefjn;ljefbvlewhfo</p>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="sketch.js"></script>
-    <script src="dazzleSketch.js"></script>
-</body>
-</html>
 
 ---
 
