--- a/2020_Dec_QCBS/index.Rmd
+++ b/2020_Dec_QCBS/index.Rmd
@@ -2,20 +2,19 @@
 title: "Exploring the complexity of ecological networks using SVD entropy"
 subtitle: | 
 author: |
-  Tanya Strydom, 
+  <u>Tanya Strydom</u>, <br> 
   Gullio V. Dalla Riva & 
   Timothée Poisot
 date: |
   <table style="border-style:none; padding: 0 0 50px 0; background-color:transparent" class="table"><tr>
   <th style="padding:0 30px"><a href="https://twitter.com/tanyas_08"><i class="fa fa-twitter"></i></a></th>
-  <th style="padding:0 30px"><a href="https://github.com/tanyas08">  <i class="fa fa-github"> </i></a></th>
   </tr><tr style="background-color:transparent">
   <th style="padding:0 30px"><a href="https://twitter.com/tanyas_08"> @TanyaS_08 </a></th>
-  <th style="padding:0 30px"><a href="https://github.com/tanyas08">   @TanyaS08  </a></th>
   </tr></table>
 output:
   xaringan::moon_reader:
     lib_dir: libs
+    css: xaringan-themer.css
     nature:
       highlightStyle: github
       highlightLines: true
@@ -28,216 +27,82 @@ options(htmltools.dir.version = FALSE)
 htmltools::tagList(rmarkdown::html_dependency_font_awesome())
 ```
 
-class: center, middle
+```{r xaringan-themer, include=FALSE, warning=FALSE}
+library(xaringanthemer)
+style_duo_accent(
+  primary_color = "#4B384C",
+  secondary_color = "#FF961C"
+)
+```
+# The Traditional Definition of Complexity
 
-Presentation created using **{xaringan}** (the **robot** theme)
-
-Slides available at [https://tanyas08.github.io/Talks/2020_Dec_TUKS/index.html#1](https://tanyas08.github.io/Talks/2020_Dec_TUKS/index.html#1)
-
----
-
-# The Backstory
-
-.center[species interaction networks 🕸 + fancy maths 🧮 | FAIR & Open Science ⚖️ | part-time doodler 🎨 | warm beverage fan ☕]
-
---
-.center[
-<br>
-Participant of the 5th [Plant Functional Traits Course](https://plantfunctionaltraitscourses.w.uib.no/)
-
-Placed a lot of focus on doing reproducible science
-
-<br>
-Inspired [this](https://doi.org/10.1002/ece3.7009) manuscript on how we can incorporate
-
-teaching FAIR and Open Science in 
-student training
-]
-
---
-
-<span style="margin: 0;
-  position: absolute;
-  top: 31%;
-  left: 15%;">
-  <img src="img/NextGen.png" width="85%" /></span>
-  
---
-
-<span style="margin: 0;
-  position: absolute;
-  top: 31%;
-  left: 27%;">
-  <img src="img/Panel2.png" width="67%" /></span>
 
 ---
 
-# What is Open Science?
+# Taking a Physical Approach to Complexity
 
-.center[*A global movement to promote integrity, repeatability, and transparency across all aspects of scientific research*]
+$\mathbf{A} = \mathbf{U}\cdot\mathbf{\Sigma}\cdot\mathbf{V}^T$
 
---
+$m \times m$ orthogonal matrix and
+$\mathbf{V}$ an $n \times n$ orthogonal matrix. The columns in these matrices
+are, respectively, the left- and right-singular vectors of $\mathbf{A}$.
+$\mathbf{\Sigma}$ is a diagonal matrix, where $\sigma_{i} = \Sigma_{ii}$, which contains the singular values of $\mathbf{A}$. When the values of
+$\mathbf{\sigma}$ are arranged in descending order, the singular values are
+unique, though the singular vectors may not be
+
+---
+
+# Estimating Complexity
 
 .pull-left[
-**Which includes:**
+**Using Rank Deficiency**
 
-- Open access to publications
+wkqfjqef.
 
-- Open access to data
-
-- Open source code and data handling
+$$
+D = 1-\frac{r}{M}
+$$
 ]
 
---
+.pull-right[
+**Using SVD Entropy**
 
-<span style="margin-left:-47%; position: absolute; top: 63%"><img src="img/TheWay.jpeg" width="58%" /></span>
-
----
-
-# Make your Science FAIR
-
-.center[***F**indable, **A**ccessible, **I**nteroperable and **R**eproducible*]
-
----
-
-# Where to Start Though?
-
-.footnote[[*] Respecting data sharing restrictions and embargoes]
-
-.left-column[data lifecycle.png]
-
-.right-column[
-- Think about how you enter your data
-  * Follow data and metadata standards (e.g. [DarwinCore](https://www.tdwg.org/))
-  * Document it (e.g. README file) think of this as an extensive methods section
-
-
-- Document data processing and analysis
-  * Use code-based workflows
-  * Annotate said code
-  
-  
-- Archive data in an accessible way
-  * Make as open and findable as possible<sup>*</sup> e.g. a data statement and link to archive/repository
-  * Use non-propriety file formats e.g. .csv/.txt
-  * Include **all** documentation
-  
-  
-- Do some of your own research
+$$
+J = -\frac{1}{\ln(k)}\sum_{i=1}^k s_i\cdot\ln(s_i)
+$$
 ]
 
 ---
-class: inverse, middle, center
+# Network Structure Captures Network Complexity 
 
-background-image: url(https://d33wubrfki0l68.cloudfront.net/62bcc8535a06077094ca3c29c383e37ad7334311/a263f/assets/img/logo.svg)
-background-position: bottom
-background-size: 20%
-
-# 1. Scripting changes
-
+.footnote[But then things begin to tell a different story...]
 ---
-background-image: url(https://d33wubrfki0l68.cloudfront.net/62bcc8535a06077094ca3c29c383e37ad7334311/a263f/assets/img/logo.svg)
-background-position: bottom right
-background-size: 20%
-
-# Keep it Scripted
-
-Ultimately after inputting your data into a file<sup>*</sup> it should remain untouched and unchanged. 
-
-.footnote[[*] Ideally using a non propriety format such as .csv or .txt]
-
---
-
-**What does that even mean?**
-
---
-
-- We want to keep `data_raw.csv` intact and end up with `data_clean.csv` on the other side
-
---
-
-**Why should I script it?**
---
-
-1. It allows you (and others) to keep track of<br>what you changed
-
-1. Document why you made the changes you<br>did (*sensu lato* a lab book)
-
-1. Avoid the all to common `_cleaned`,<br>`_cleaned2` issue
+# Complexity does not mean Robustness
 
 
 ---
-class: inverse, middle, center
 
-background-image: url(https://d33wubrfki0l68.cloudfront.net/62bcc8535a06077094ca3c29c383e37ad7334311/a263f/assets/img/logo.svg)
-background-position: bottom
-background-size: 20%
-
-# 2. Annotating code
-
----
-
-# Annotations save lives <sub style="font-size: medium;">(and time)</sub>
+# Structure Constrains Complexity
 
 Annotating your code by adding comments makes it easier for you (and others) to understand what or why you decided to do what you did
 
---
-
-.pull-left[
-- Pseudocode can double up as annotations
-  * Pseudocoding is a way of writing out your code in 'plain language' before you start coding it up
-  
-  
-- Detail specific changes or reasoning
-  * Especially when cleaning or transforming data
-  ]
-
 ---
-class: inverse, middle, center
 
-background-image: url(https://d33wubrfki0l68.cloudfront.net/62bcc8535a06077094ca3c29c383e37ad7334311/a263f/assets/img/logo.svg)
-background-position: bottom
-background-size: 20%
+# Although Complex, Networks Could Be Better
 
-# 3. Data Archiving <sub style="font-size: medium;">(with bonus version control)</sub> 
+$$
+z_i = \frac{x_i-\mu_i}{\sigma_i}
+$$
 
 ---
 
-# Get with GitHub
+# So What
 
-Think of GitHub as a google drive of sorts that you would keep your projects in - the only difference is that it has some bonus features.
-
-* **It's Open Access:** Like a social media profile that people can click on and explore it *i.e.* you can share and showcase your work/packages/projects<sup>*</sup>.
-  + This is where your data/analyses can 'live' until needed.
-
-* **It has Version Control:** This means that every time you re-upload a file the older versions are saved (and can be recouped if needed).
-  + You can do this [straight from RStudio](https://happygitwithr.com/rstudio-git-github.html)
-  + This also facilitates collaboration in a big way (no more email chain!)
-
-* **It's Designed for Programming:** Aside form simple storage of files you can design [workflows](https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions) that run jobs depending on what happens in the repository.
-
-.footnote[[*] I find this also 'forces' me to make sure my code is readable/shareable]
 
 ---
 
-# A GitHub 'Primer'
+class: center, middle
 
-1. GitHub is the 'norm' in the world of Open Source  - so if you want to go open  go with GitHub
+Presentation created using **{xaringan}**
 
-1. [Happy Git and GitHub for the useR](https://happygitwithr.com) is a great starting point if you're interested
-  + especially for installing Git on your device (it can be a bit confusing)
-
-1. You can also have private repositories
-  * So you can keep your work 'hidden' but still cash in on version control and easier collaborating
-  
-1. As university students you qualify for a [free pro account](https://education.github.com/pack) - *go for it it*
-
----
-
-# Other Ways to Open your Science
-
-+ 
-
-
-
-
+Slides available at [https://tanyas08.github.io/Talks/2020_Dec_QCBS/](https://tanyas08.github.io/Talks/2020_Dec_QCBS/index.html#1)
