--- a/2020_Dec_TUKS/index.Rmd
+++ b/2020_Dec_TUKS/index.Rmd
@@ -39,6 +39,11 @@ htmltools::tagList(rmarkdown::html_dependency_font_awesome())
 .center[
 species interaction networks 🕸 + fancy maths 🧮 | FAIR & Open Science ⚖️ | part-time doodler 🎨 | warm beverage fan ☕]
 
+???
+
++ Set up and emphasise that new to OS and by no means an expert
++ a bit of self marketing
+
 --
 .center[
 <br>
@@ -53,6 +58,11 @@ Placed a lot of focus on doing reproducible science
   left: 1%;">
   <img src="img/PFTC1.png" width="99%" /></span>
 
+???
+
++ Mention coming to SA next year - keep eyes peeled
++ a good opprotunity to learn about OS etc. and great team
+
 --
 
 <span style="margin: 0;
@@ -61,6 +71,11 @@ Placed a lot of focus on doing reproducible science
   left: 1%;">
   <img src="img/PFTC2.png" width="99%" /></span>
   
+???
+
++ getting stuck in a global pandemic
++ also learn some other things
+
 --
 
 <span style="margin: 0;
@@ -82,6 +97,7 @@ Placed a lot of focus on doing reproducible science
   top: 10%;
   right: 10%;"> Manuscript link <a href="https://doi.org/10.1002/ece3.7009">here</a> </span>
   
+
 --
 
 <span style="margin: 0;
@@ -90,12 +106,19 @@ Placed a lot of focus on doing reproducible science
   left: 27%;">
   <img src="img/Panel2.png" width="67%" /></span>
 
+???
+
++ promo ms
+
 ---
 
 # What is Open Science?
 
 .center[*A global movement to promote integrity, repeatability, and transparency across all aspects of scientific research*]
 
+???
+
++ first thing that comes to mind is probably OA pubblishing
 --
 
 .pull-left[
@@ -112,6 +135,10 @@ Placed a lot of focus on doing reproducible science
 .pull-right[**Reproducability** = being able to get the same results using the same *analysis* and same *data*
 ]
 
+???
+
++ Have you ever thought why there is this movement towards using R and gaving to go through the frustration/tears of learning that on top of new statistical methods???
++ mention here that as mostly R users taking a BIG step in the right direction
 
 --
 
@@ -165,6 +192,11 @@ But in order for this to happen your data need to be **usable**
 
 + Open data leads to increased citations
 
+???
+
++ from a career prespective
+
+
 --
 
 + It fosters collaboration and opens doors for what we can achieve with our research
@@ -172,12 +204,20 @@ But in order for this to happen your data need to be **usable**
 + It makes your (personal) workflow easier (especially for future you) **and** makes for easier collaborative work/writing
   + The little bit of extra time is worth it - trust me
   
+???
+
++ from a more 'philosophical' perspective
+
 ---
 
 <figure>
   <img src="img/reproducibiity_relocates_time.png" width="100%">
   <figcaption>Image credit:@dsquintana, https://osf.io/dztvq/</figcaption>
 </figure>
+
+???
+
+in terms of future you thinking yourself -> its more of a re-allocation of time and that re-allocation also makes your date more 'open'
 
 ---
 
@@ -198,6 +238,11 @@ But in order for this to happen your data need to be **usable**
 <img src="img/case_study.png" width="100%" />
 ]
 
+???
+
++ this is my current reality at the moment since we want to try and publish this now
++ I can semi follow what is going on - imagine I sent this to any one of you and asked if you could have a look at things
+
 ---
 
 # Where to Start Though?
@@ -206,6 +251,7 @@ But in order for this to happen your data need to be **usable**
 .left-column[
 <img src="img/DataLifecycle_vert.png" width="100%" />
 ]
+
 
 --
 
@@ -222,13 +268,19 @@ But in order for this to happen your data need to be **usable**
   * Annotate said code
   
   
-- Archive data in an accessible way
-  * Make as open and findable as possible<sup>*</sup>
+- Archive data/code in an accessible way
+  * Make as open and findable as possible<sup>*</sup> e.g a doi for files
+      * [OSF](https://osf.io) 
+      * [Zenodo](https://zenodo.org)
   * See [here](https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1005097) for some more tips
   
   
-- Do some [futher reading](https://www.fosteropenscience.eu/courses)
+- Some [futher reading](https://www.fosteropenscience.eu/courses)
 ]
+
+???
+
++ note links are for data repository - GitHub (coming up) is better for coding and integrates with these
 
 ---
 class: inverse, middle, center, animated, bounceInDown
@@ -263,6 +315,11 @@ background-size: 40%
 + Documenting how scripts 'work' - even better
 ]
 
+???
+
++ mention my recent TRY experience
++ enter the README
+
 ---
 
 background-image: url(img/Documentation.png)
@@ -288,6 +345,10 @@ background-size: 40%
 Annotating your code by adding comments makes it easier for you (and others) to understand what or why you decided to do what you did
 ]
 
+???
+
++ and ties in well with documentation
+
 --
 
 .pull-left[
@@ -297,6 +358,10 @@ Annotating your code by adding comments makes it easier for you (and others) to 
 - Detail specific changes or reasoning
   * Especially when cleaning or transforming data
   ]
+
+???
+
++ this not gives 'credibility' to your work but also makes it more accessible for those that maybe don't hace the same statistical/programming language background as you e.g. Julia
 
 --
 
@@ -311,7 +376,11 @@ background-image: url(img/octobiwan.png)
 background-position: bottom
 background-size: 35%
 
-# 3. Data Archiving <sub style="font-size: medium;">(with bonus version control)</sub> 
+# 3. Archiving <sub style="font-size: medium;">(with bonus version control)</sub> 
+
+???
+
++ focusing on the coding workflow side of things...
 
 ---
 
@@ -321,10 +390,15 @@ background-size: 35%
 Think of GitHub your normal documents folder(s) - the only difference is that it has some bonus features.
 ]
 
-* It has **Version Control:** This means that every time you re-upload a file the older versions are saved (and can be recouped if needed).
-  + You can do this [straight from RStudio](https://happygitwithr.com/rstudio-git-github.html)
+* It has **Version Control:** This means that every time you re-upload a file the older versions are saved.
+  + You can do the 'uploading' & 'downloading' [straight from RStudio](https://happygitwithr.com/rstudio-git-github.html)
   + Everyone has the most up to date version on their device - *no more email chain!*
   
+???
+
++ you can also restore to previous versions
++ introduce the idea of pusing and pulling
++ commit comments also help with keeping track of changes
 
 --
 
@@ -336,6 +410,10 @@ Think of GitHub your normal documents folder(s) - the only difference is that it
 --
 
 * It's **designed for programming:** Aside form simple storage of files you can design [workflows](https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions) that run jobs depending on what happens in the repository.
+
+???
+
++ for the excited user
 
 ---
 
@@ -349,43 +427,32 @@ background-size: 100%
 1. GitHub is the 'norm' in the world of Open Source  - so if you want to go open go with GitHub
 
 1. [Happy Git and GitHub for the useR](https://happygitwithr.com) is a great starting point if you're interested
-  + especially for installing Git on your device (it' can be a bit confusing's not as confusing as they make it out to be though)
+  + especially for installing Git on your device (it's not as confusing as they make it out to be though)
 
 1. You can also have private repositories
   * So you can keep your work 'hidden' but still cash in on version control and easier collaborating
   
-1. As university students you qualify for a [free pro account](https://education.github.com/pack) - *go for it it*
+1. As university students you qualify for a [free pro account](https://education.github.com/pack) - *go for it*
 
 ---
 # To Summarise
 
 1. Demonstrating an ethos of Open Science practice makes you a more competitive applicant for funding/jobs
 
-1. Future you will thank you when you need to re-run an analyses later - *i.e.* time is effectively relocated
+1. Future you will thank you when you need to re-run an analyses later 
 
-1. Being reproducible makes you credible - it shows that you back your data/methods and *encourages* triple-checking of everything
+1. Being reproducible lands credibility - it shows that you back your data/methods and *encourages* re-checking of things
 
-1. You are contributing to the greater collective scientific knowledge and helping reshape how we do science
+1. You are contributing to the greater collective knowledge and helping reshape how we do science
 
 1. Social media is another tool you can use
-  + Twitter has a big OS community and is a great way to get connected - [Twitter for Scientists](https://t4scientists.com/) is a good starting point if you find things a bit daunting
+  + Twitter has a big OS community and is a great way to get connected - [Twitter for Scientists](https://t4scientists.com/) is a good starting point
 
 1. You can start one bite at a time - it takes time to find what works, so take it project-by-project (and something is better than nothing)
 
----
+???
 
-# Other Ways to Open your Science
-
-+ Data archiving
-
-+ Pre-registered reports
-
-+ Preprints
-
-+ Social media
-  * Twitter has a big OS community and is a great way to get connected - [Twitter for Scientists](https://t4scientists.com/) is a good starting point if you find things a bit daunting
-
-+ ORCiD
++ emphasise that even I am still learning/just starting out and as coders they are well on their way
 
 ---
 
