--- a/2020_Dec_QCBS/index.Rmd
+++ b/2020_Dec_QCBS/index.Rmd
@@ -35,16 +35,16 @@ style_duo_accent(
 # The complexity of communities
 
 .pull-left[
-Network theory provides a powerful approach to understanding the complexity of ecological networks
+Quantifying the complexity and stability of communities remains a challenge.
 ]
 
 
 <span 
   style="
-  margin-left:-10%; 
+  margin-left:-5%; 
   position: absolute; 
-  top: 17%">
-  <img src="img/community.png" width="80%" />
+  top: 5%">
+  <img src="img/community.png" width="100%" />
 </span>
 
 ???
@@ -54,36 +54,45 @@ Network theory provides a powerful approach to understanding the complexity of e
 
 <span style="margin: 0;
   position: absolute;
-  bottom: 10%;
+  bottom: 30%;
   text-align: left;
-  left: 6%;"> We can use network structure <br>
+  left: 7%;"> Network theory provides a <br>
+  powerful approach <br>
+  and allows us <br>
   to infer ecological properties <br>
   and processes
 </span>
   
 <span 
   style="
-  margin-left:-10%; 
+  margin-left:-5%; 
   position: absolute; 
-  top: 17%">
-  <img src="img/Network.png" width="80%" />
+  top: 5%">
+  <img src="img/Network.png" width="100%" />
 </span>
 
-<span style="margin: 0;
-  position: absolute;
-  top: 20%;
-  text-align: center;
-  right: 5%;"> Complexity = stability
-</span>
-  
 ???
-This notion doesn't really hold though...
+Complexity and stability are issues that have been studied but has remained a challenge to quantify. The debate is still prevalent in ecology
 
 ---
 
 # A traditional definition of complexity
 
 Assume that a system is complex because it has many parts *i.e.* measuring structural complexity
+
+--
+
+.pull-left[
+**Nestedness**
+
+Do species assemblages form subsets of larger assemblages?
+]
+
+.pull-right[
+**Connectance**
+
+What proportion of potential interaction are realised?
+]
 
 <span 
   style="
@@ -93,11 +102,15 @@ Assume that a system is complex because it has many parts *i.e.* measuring struc
   <img src="img/structure.png" width="95%" />
 </span>
 
+???
+Nestedness would look at specialists vs generalists
 ---
 
 # Taking a physical approach to complexity
 
 Instead we can measure the 'physical complexity' *i.e.* the amount of information required to encode the system
+
+--
 
 <span 
   style="
@@ -122,17 +135,17 @@ $$\mathbf{A} = \mathbf{U}\cdot\mathbf{\Sigma}\cdot\mathbf{V}^T$$
 
 <span 
   style="
-  margin-left:00%; 
+  margin-left:-4%; 
   position: absolute; 
-  top: 42%">
-  <img src="img/SVD.png" width="95%" />
+  top: 35%">
+  <img src="img/SVD.png" width="97%" />
 </span>
 
 ---
 
 # SVD Entropy as internal complexity
 
-Using the $\sigma$ values from $\mathbf{\Sigma}$ and following Pielou's evenness  (Pielou 1975) we can ensure that $\sigma$ values are less than unity:
+Using the $\sigma$ values from $\mathbf{\Sigma}$ and following Pielou's evenness  (Pielou 1975) we can ensure that $\sigma$ values are less than one:
 
 $$
 s_i = \sigma_i/\text{sum}(\sigma)
@@ -170,7 +183,7 @@ where k is the max rank
 ---
 # SVD Entropy of Networks
 
-Ecological networks are extremely complex
+Ecological networks are *extremely* complex
 
 <span 
   style="
@@ -209,8 +222,8 @@ Ecological networks are extremely complex
 </span>
 
 ???
-
-[structural measure of complexity are related to robustness (simulating extinctions)... BUT we don't see this with SVD Entropy]
+First do the axes and then have the point appear
+How do we define resilience in ecological terms -> focus on how we defined resilience
 
 
 ---
@@ -228,3 +241,6 @@ Ecological networks are extremely complex
 .footnote[
 For a more complete breakdown the preprint can be found at [doi.org/fmpt](https://doi.org/fmpt)
 ]
+
+???
+Visually draw it back so bring the images - we can use different measures of complexity and they can tell a different story, building lego blocks
