--- a/2021_CommitteeStuff/index.Rmd
+++ b/2021_CommitteeStuff/index.Rmd
@@ -54,7 +54,7 @@ style_duo_accent(
 + We cannot feasibly, empirically measure all network so we need a toolset to predict them -> `Project One Ring`
 + Let's see how well this works while also providing a 'management tool' -> `Project Pokedex`
 + Okay cool but what about the networks in *my* landscape -> `Project Wombat`
-+ But also how are networks percieved? What is complexity anyway -> `Project Malcom` (this link is iffy at best...)
++ But also how are networks percieved? What is complexity anyway and what constrains it -> `Project Malcom` (this link is iffy at best...)
 
 ---
 
