:rocket: added some resources

--- a/2021_GitHubPrimer_PFTC/index.Rmd
+++ b/2021_GitHubPrimer_PFTC/index.Rmd
@@ -193,6 +193,16 @@ pull request that 1) makes sure there are no conflicts and 2) allows for **revie
   <img src="img/Comment.png" width="60%" /></span>
 
 ---
+# Before we push we need to commit
+
++ 'Pushing' is essentially sending (& saving) the work you did on your local device to the online world
+
++ Each push needs to come with a commit message - this is a record of what you did/ changes you made
+
++ Committing is 'cheap' (at least in the world of git)
+  + You can (should) commit multiple times during a session
+
+---
 # Informative commit messages
 
 .center[I like to say the information is in the emojj... but maybe not always. *i.e. I just want to have fun with commit messages here...* ]
@@ -270,3 +280,22 @@ pull request that 1) makes sure there are no conflicts and 2) allows for **revie
   top: 60%;
   left: 60%;">
   <img src="img/octobiwan.png" width="70%" /></span>
+
+---
+# Useful Resources
+
+#### GitHub + RStudio (*i.e.* the Aud & Richard collection)
+
++ [Intro](https://bioceed.uib.no/dropfolder/sites/bioSTATS-and-R/DataManagement/GitTutorial.html#01_Why_we_use_version_control) to version control
++ [Branching](https://bioceed.uib.no/dropfolder/sites/bioSTATS-and-R/DataManagement/BranchTutorials.html)
++ [Forking](https://bioceed.uib.no/dropfolder/sites/bioSTATS-and-R/DataManagement/ForkTutorial.html)
+
+#### [{Usethis}](https://usethis.r-lib.org/articles/articles/git-credentials.html) a new R specific package to make working withGitHub a bit easier
+
++ The Aud & Richard collection should cover this but thought to throw it in anyway...
+
+#### Homebrew for MacOS users
+
++ Sometimes MacOS makes life challenging - installing git can be one of them (at least last time I checked)
++ You can use [Homebrew](https://brew.sh) to install git (and a whole host of other things at some point so highly recommend) 
++ [This](https://jennybc.github.io/2014-05-12-ubc/ubc-r/session03_git.html) tutorial does a pretty great walk-through after that
